fixing menu guru, siswa, border collapse navbar

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -141,3 +141,14 @@ body {
   color: white;
   text-decoration: none;
 }
+
+/* .navbar-toggler:focus {
+  outline: none;
+  box-shadow: none;
+} */
+
+.navbar-toggler:active, .navbar-toggler:focus, .navbar-toggler-icon:focus {
+  outline: none;
+  box-shadow: none;
+  border: none;
+}
